# bwhc-kafka-rest-proxy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: auth.rs  cli.rs  main.rs  routes.rs  sender.rs
