[package]
name = "bwhc-kafka-rest-proxy"
version = "0.2.0"
edition = "2021"
authors = ["Paul-Christian Volkmer <volkmer_p@ukw.de>"]
license = "AGPL-3.0"
description = "bwHC MTB-File REST Proxy für Kafka"

# Dependencies

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]

[dependencies.log]
version = "0.4"

[dependencies.axum]
version = "0.8"
features = ["tracing"]

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.tracing]
version = "0.1"

[dependencies.tokio]
version = "1.44"
features = ["rt-multi-thread"]

[dependencies.tower-http]
version = "0.6"
features = ["trace"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.rdkafka]
version = "0.37"
features = ["cmake-build", "libz-static"]

[dependencies.uuid]
version = "1.16"
features = ["v4"]

[dependencies.base64]
version = "0.22"

[dependencies.bcrypt]
version = "0.17"

[dependencies.bwhc-dto]
git = "https://github.com/ccc-mf/bwhc-dto-rs"
branch = "master"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Profiles

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"